@@ -2,6 +2,7 @@ $Id$
 
 2003.02.14
  * Added librsvg support (contributed by Olivier Andrieu)
+ * Ported applications/browser
 
 2003.02.13
  * Starting to add GtkTreeView. See tree2.ml.
